new-manifest.yaml
---
# Source: mlflow-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  annotations:
     service.alpha.openshift.io/serving-cert-secret-name: mlflow-server-tls
  labels:
    helm.sh/chart: mlflow-server-0.6.6
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/version: "2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: mlflow-server
      protocol: TCP
      name: mlflow-server
    - port: 8443
      targetPort: oauth-proxy
      protocol: TCP
      name: oauth
  selector:
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
---
# Source: mlflow-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  annotations:
    app.openshift.io/vcs-uri: github.com/strangiato/mlflow-server
  labels:
    helm.sh/chart: mlflow-server-0.6.6
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/version: "2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlflow-server
      app.kubernetes.io/instance: mlflow-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlflow-server
        app.kubernetes.io/instance: mlflow-server
    spec:
      serviceAccountName: mlflow-server
      securityContext:
        {}
      containers:
        - name: mlflow-server
          securityContext:
            {}
          image: "quay.io/troyer/mlflow-server:2.12"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mlflow-server
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: mlflow-server
          readinessProbe:
            httpGet:
              path: /health
              port: mlflow-server
            initialDelaySeconds: 30
          resources:
            {}
        - name: oauth-proxy
          image: "registry.redhat.io/openshift4/ose-oauth-proxy:v4.12"
          imagePullPolicy: 
          ports:
            - containerPort: 8443
              name: oauth-proxy
          args:
            - --https-address=:8443
            - --provider=openshift
            - --openshift-sar={"namespace":"mflow-test","resource":"services","resourceName":"mlflow-server","verb":"get"}
            - --openshift-service-account=mlflow-server
            - --upstream=http://localhost:8080
            - --tls-cert=/etc/tls/private/tls.crt
            - --tls-key=/etc/tls/private/tls.key
            - --cookie-secret=SECRET
          volumeMounts:
            - mountPath: /etc/tls/private
              name: oauth-tls
          livenessProbe:
            httpGet:
              path: /oauth/healthz
              port: 8443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /oauth/healthz
              port: 8443
              scheme: HTTPS
          resources:
            {}
      volumes:
        - name: oauth-tls
          secret:
            secretName: mlflow-server-tls
---
# Source: mlflow-server/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mlflow-server
  labels:
    helm.sh/chart: mlflow-server-0.6.6
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/version: "2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  to:
    kind: Service
    name: mlflow-server
    weight: 100
  port:
    targetPort: oauth
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
# Source: mlflow-server/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "mlflow-server-test-connection"
  labels:
    helm.sh/chart: mlflow-server-0.6.6
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/version: "2.12"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['mlflow-server:8080']
  restartPolicy: Never
---
# Source: mlflow-server/templates/tests/test-training.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "mlflow-server-test-training"
  labels:
    helm.sh/chart: mlflow-server-0.6.6
    app.kubernetes.io/name: mlflow-server
    app.kubernetes.io/instance: mlflow-server
    app.kubernetes.io/version: "2.12"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: training
      image: "quay.io/troyer/mlflow-server-training-test:latest"
      imagePullPolicy: "IfNotPresent"
  restartPolicy: Never
  serviceAccountName: mlflow-server
